# rebus

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
crates/crossword-parser/: Cargo.toml
crates/xword-parser/: Cargo.toml
crates/xword-parser/src/: error.rs  ipuz.rs  jpz.rs  lib.rs  puz.rs
crates/xword-parser/tests/fixtures/: all-a.puz  puzzleme-example-crossword.jpz  puzzleme-example-crossword.puz  puzzleme-example-crossword.xml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: CompletionOverlay.tsx  ErrorBoundary.tsx  KonamiEasterEgg.test.tsx  KonamiEasterEgg.tsx  PuzzleLibrary.test.tsx  PuzzleLibrary.tsx  SettingsPanel.tsx  Timer.tsx  Toolbar.tsx  WelcomeScreen.tsx
src/hooks/: useDragDrop.ts  useKeyboardNavigation.test.ts  useKeyboardNavigation.ts  useKonamiCode.test.ts  useKonamiCode.ts  usePuzzleLoader.test.ts  usePuzzleLoader.ts  useTheme.test.ts  useTheme.ts  useTimer.test.ts  useTimer.ts
src/store/: libraryStore.test.ts  libraryStore.ts  puzzleStore.test.ts  puzzleStore.ts  settingsStore.test.ts  settingsStore.ts
src/styles/: index.css
src/types/: library.ts  progress.ts  puzzle.ts  settings.ts
src/utils/: celebrationSound.test.ts  celebrationSound.ts  completionPercent.test.ts  completionPercent.ts  formatting.test.ts  formatting.ts  (+11 more)
(+13 files in other folders)
