[package]
name = "rebus"
version = "0.1.0"
description = "A crossword puzzle solver"
authors = ["Conor Rafferty"]
edition = "2021"

[lib]
name = "rebus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xword-parser = { path = "../crates/xword-parser" }
